# unifi-ac-lite-gpl

build_dir/target-mips_24kc_musl-1.1.19/attr-20160302/: configure.ac
build_dir/target-mips_24kc_musl-1.1.19/busybox-1.25.1/: Makefile.flags
build_dir/target-mips_24kc_musl-1.1.19/ebtables-2015-10-28-4c3e5cd3/: Makefile  libebtc.c
build_dir/target-mips_24kc_musl-1.1.19/iputils-s20101006/: Makefile  clockdiff.c  ping.c  ping6.c  ping6_niquery.h  ping_common.h  (+1 more)
build_dir/target-mips_24kc_musl-1.1.19/ubus-2017-02-18/examples/: CMakeLists.txt
gpl-uboot-uap-qca-gen2-2.0.10/: .gitignore  Makefile  README.ubnt.md  build_requires  config.mk  mkconfig
gpl-uboot-uap-qca-gen2-2.0.10/common/: Makefile  bedbug.c  cmd_ace.c  cmd_boot.c  cmd_bootm.c  cmd_doc.c  cmd_flash.c  cmd_jffs2.c  cmd_net.c  cmd_pll.c  docecc.c  env_common.c  env_flash.c  environment.c  exports.c  main.c  ssd1317fb-splash.h  ubnt_api_calls.c
gpl-uboot-uap-qca-gen2-2.0.10/drivers/: ns7520_eth.c  ns9750_eth.c  ns9750_serial.c  s3c4510b_eth.h  s3c4510b_uart.c
gpl-uboot-uap-qca-gen2-2.0.10/include/: 956x.h  _exports.h  ar7240_soc.h  ar934x_soc.h  atheros.h  cmd_confdefs.h  common.h  exports.h  flash.h  linux_logo.h  lxt971a.h  music_soc.h  net.h  ns7520_eth.h  ns9750_bbus.h  ns9750_eth.h  ns9750_mem.h  ns9750_ser.h  ns9750_sys.h  systemace.h  ubnt_api_calls.h
gpl-uboot-uap-qca-gen2-2.0.10/lib_mips/: board.c  mips_linux.c
gpl-uboot-uap-qca-gen2-2.0.10/net/: Makefile  eth.c  net.c  tftp_server.c  tftp_server.h
gpl-uboot-uap-qca-gen2-2.0.10/tools/: Makefile  keygen.c  recover.py  scrambler.c
(+667 files in other folders)
